@@ -202,7 +202,8 @@ if (BUILD_TOOLS)
   add_library(bandit-controller "MODULE" example/banditII/bandit-controller.cpp)
 
   # tools
-  add_executable(regress example/regress.cpp)
+  add_executable(regress/regress example/regress.cpp)
+  add_executable(regress/compare-trajs example/compare-trajs.cpp)
   add_executable(conv-decomp example/conv-decomp.cpp)
   add_executable(convexify example/convexify.cpp)
   add_executable(output-symbolic example/output-symbolic.cpp)
@@ -223,7 +224,8 @@ if (BUILD_TOOLS)
   target_link_libraries(bandit-controller Moby)
 
   # tools
-  target_link_libraries(regress Moby)
+  target_link_libraries(regress/regress Moby)
+  target_link_libraries(regress/compare-trajs Moby)
   target_link_libraries(conv-decomp Moby)
   target_link_libraries(convexify Moby)
   target_link_libraries(output-symbolic Moby)
