@@ -1,0 +1,48 @@
+# !/bin/bash
+# script for doing regression testing
+
+# test the spinning box example(s)
+echo "Testing sitting box example"
+./regress/regress -mt=10 ./example/contact_simple/contact.xml ./regress/regress.out.tmp 
+./regress/compare-trajs ./regress/sitting-box.dat ./regress/regress.out.tmp
+echo "Testing spinning box example #1"
+./regress/regress -mt=10 ./example/contact_simple/spinning-box1.xml ./regress/regress.out.tmp 
+./regress/compare-trajs ./regress/spinning-box1.dat ./regress/regress.out.tmp
+echo "Testing spinning box example #2"
+./regress/regress -mt=10 ./example/contact_simple/spinning-box2.xml ./regress/regress.out.tmp 
+./regress/compare-trajs ./regress/spinning-box2.dat ./regress/regress.out.tmp
+
+# test the stacked box example
+echo "Testing stacked box example"
+./regress/regress -mt=10 ./example/contact_simple/stack.xml ./regress/regress.out.tmp 
+./regress/compare-trajs ./regress/stack.dat ./regress/regress.out.tmp
+
+# test the driving robot example
+echo "Testing mobile robot example"
+./regress/regress -mt=10 -p=./example/mrobot/libcontroller.so ./example/mrobot/pioneer2.xml ./regress/regress.out.tmp
+./regress/compare-trajs ./regress/pioneer.dat ./regress/regress.out.tmp
+
+# test the bouncing sphere example
+echo "Testing deformable sphere example"
+./regress/regress -mt=10 ./example/bouncing_sphere/sphere.xml ./regress/regress.out.tmp
+./regress/compare-trajs ./regress/bouncing-sphere.dat ./regress/regress.out.tmp
+
+# test the unilaterally constrained mechanism examples
+echo "Testing unilaterally constrained pendulum example"
+./regress/regress -mt=10 ./example/unilaterally-constrained-mechanisms/pendulum.xml ./regress/regress.out.tmp
+./regress/compare-trajs ./regress/uc-pendulum.dat ./regress/regress.out.tmp
+echo "Testing unilaterally constrained slider crank example"
+./regress/regress -mt=10 ./example/unilaterally-constrained-mechanisms/slider-crank.xml ./regress/regress.out.tmp
+./regress/compare-trajs ./regress/uc-slider-crank.dat ./regress/regress.out.tmp
+
+# test the articulated body examples
+echo "Testing chain2 example"
+./regress/regress -mt=10 ./example/chain-contact/chain2.xml ./regress/regress.out.tmp
+./regress/compare-trajs ./regress/chain2.dat ./regress/regress.out.tmp
+echo "Testing chain5 example"
+./regress/regress -mt=10 ./example/chain-contact/chain5.xml ./regress/regress.out.tmp
+./regress/compare-trajs ./regress/chain5.dat ./regress/regress.out.tmp
+
+# finally, remove temporary files
+rm -f ./regress/regress.output.tmp
+
